feat(security): 增强管理员及权限管理功能
- 支持超级管理员角色（super_admin）及其权限判定
- AdminSecurityUserService中加载用户角色和权限，构建Spring Security授权集合
- AuthService扩展，新增获取当前用户信息与权限接口
- AuthController新增获取当前用户权限的接口，优化登出操作调用
- UserService使用RoleService统一获取用户角色，简化角色处理逻辑
- UserController权限注解新增对超级管理员角色的支持
- UserMapper扩展用户角色相关数据库操作，支持角色ID与编码查询及关联
- 客户端注册用户时默认分配普通用户角色，保障RBAC一致性
- Token刷新逻辑优化，使用SysUserDetails获取权限列表，保障权限准确性
- SecurityUtils对角色权限进行去前缀和格式规范处理，兼容历史数据
- SecurityConfig增强异常处理，集成访问拒绝处理器并启用方法安全注解
- 优化数据访问层SQL，关联用户角色信息，提高查询效率及准确性
- CurrentUserInfoVo更新，支持角色集合表示，兼容多角色管理
- 代码格式及注释优化，提升可读性与维护性